Fixes bug where where large images are stretched when quoted

--- a/public/css/forum.css
+++ b/public/css/forum.css
@@ -2032,6 +2032,7 @@ line-height: 20px;
 }
 
 .tquote img {
+    height: auto;
     max-width: 250px !important;
 }
 
